--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,18 @@ set(DAWN_FETCH_DEPENDENCIES ON)
 set(DAWN_BUILD_MONOLITHIC_LIBRARY STATIC)
 add_subdirectory("external/dawn" EXCLUDE_FROM_ALL)
 
+find_library(Eigen REQUIRED)
+
+add_compile_definitions(SHADERS_DIR="${CMAKE_SOURCE_DIR}/src/shaders/")
+
 add_executable(main src/main.cpp)
+
+target_include_directories(main PRIVATE ${CMAKE_SOURCE_DIR}/src)
 
 if (EMSCRIPTEN)
     set_target_properties(main PROPERTIES SUFFIX ".html")
-    target_link_libraries(main PRIVATE emdawnwebgpu_cpp webgpu_glfw)
+    target_link_libraries(main PRIVATE emdawnwebgpu_cpp webgpu_glfw Eigen3::Eigen)
     target_link_options(main PRIVATE "-sASYNCIFY=1" "-sUSE_GLFW=3")
 else()
-    target_link_libraries(main PRIVATE webgpu_dawn webgpu_glfw glfw)
+    target_link_libraries(main PRIVATE webgpu_dawn webgpu_glfw glfw Eigen3::Eigen)
 endif()
