--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable(main src/main.cpp)
 target_include_directories(main PRIVATE 
     ${CMAKE_SOURCE_DIR}/src
     ${OpenCV_INCLUDE_DIRS}
+    ${CMAKE_SOURCE_DIR}/external/tinyobjloader
 )
 
 if (EMSCRIPTEN)
