--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
+
 set(DAWN_FETCH_DEPENDENCIES ON)
 set(DAWN_BUILD_MONOLITHIC_LIBRARY STATIC)
 add_subdirectory("external/dawn" EXCLUDE_FROM_ALL)
@@ -16,16 +18,16 @@ add_compile_definitions(SHADERS_DIR="${CMAKE_SOURCE_DIR}/src/shaders/")
 
 add_executable(main src/main.cpp)
 
-target_include_directories(main PRIVATE 
+target_include_directories(main PRIVATE
     ${CMAKE_SOURCE_DIR}/src
     ${OpenCV_INCLUDE_DIRS}
     ${CMAKE_SOURCE_DIR}/external/tinyobjloader
 )
 
 target_link_libraries(main PRIVATE
-    webgpu_dawn 
-    webgpu_glfw 
-    glfw 
+    webgpu_dawn
+    webgpu_glfw
+    glfw
     Eigen3::Eigen
     ${OpenCV_LIBS}
 )
