--- a/.gitmodules
+++ b/.gitmodules
@@ -5,6 +5,12 @@
 [submodule "external/tinyobjloader"]
 	path = external/tinyobjloader
 	url = https://github.com/tinyobjloader/tinyobjloader
+	shallow = true
 [submodule "external/stb"]
 	path = external/stb
 	url = https://github.com/nothings/stb
+	shallow = true
+[submodule "external/imgui"]
+	path = external/imgui
+	url = https://github.com/ocornut/imgui.git
+	shallow = true
