--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,10 @@ project(WebGpuDawnTemplate)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
-
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
 
-set(DAWN_FETCH_DEPENDENCIES ON)
-set(DAWN_BUILD_MONOLITHIC_LIBRARY STATIC)
-add_subdirectory("external/dawn" EXCLUDE_FROM_ALL)
+include(cmake/dawn.cmake)
+include(cmake/imgui.cmake)
 
 find_package(Eigen3 REQUIRED)
 find_package(OpenCV REQUIRED)
