--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,7 @@
 	path = external/imgui
 	url = https://github.com/ocornut/imgui.git
 	shallow = true
+[submodule "external/glm"]
+	path = external/glm
+	url = https://github.com/g-truc/glm.git
+	shallow = true
