--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,23 +18,27 @@ find_package(OpenCV REQUIRED)
 find_package(spdlog REQUIRED)
 
 file(GLOB SRC_FILES CONFIGURE_DEPENDS "${CMAKE_SOURCE_DIR}/src/*.cpp")
+file(GLOB BIN_TARGETS CONFIGURE_DEPENDS "${CMAKE_SOURCE_DIR}/src/bin/*.cpp")
 
-add_executable(main src/main.cpp)
+function(add_wgpu_executable name file)
+    add_executable(${name} ${file} ${SRC_FILES})
+    target_include_directories(${name} PRIVATE ${CMAKE_SOURCE_DIR}/src ${OpenCV_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR}/external/stb)
+    target_compile_definitions(${name} PRIVATE SHADERS_DIR="${CMAKE_SOURCE_DIR}/src/shaders/")
+    target_compile_definitions(${name} PRIVATE ASSETS_DIR="${CMAKE_SOURCE_DIR}/assets/")
+    target_link_libraries(${name} PRIVATE
+        webgpu_imgui
+        webgpu_dawn
+        webgpu_glfw
+        glfw
+        tinyobjloader
+        glm
+        Eigen3::Eigen
+        ${OpenCV_LIBS}
+        spdlog::spdlog
+    )
+endfunction()
 
-target_include_directories(main PRIVATE
-    ${CMAKE_SOURCE_DIR}/src
-    ${OpenCV_INCLUDE_DIRS}
-    ${CMAKE_SOURCE_DIR}/external/stb
-)
-
-target_link_libraries(main PRIVATE
-    webgpu_imgui
-    webgpu_glfw
-    webgpu_dawn
-    glfw
-    Eigen3::Eigen
-    ${OpenCV_LIBS}
-    spdlog::spdlog
-    tinyobjloader
-    glm
-)
+foreach(bin_target ${BIN_TARGETS})
+    get_filename_component(bin_target_name ${bin_target} NAME_WE)
+    add_wgpu_executable(${bin_target_name} ${bin_target})
+endforeach()
